--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1147,6 +1147,10 @@ label[id="38_SHA"] + .content {
   display: none !important;
 }
 
+.fogbugz-helper-hide-stuff .main-header-bar {
+  padding-left: 10px;
+}
+
   /* //////////////////////////
  // WYSIWYG
 ////////////////////////// */
