--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -36,6 +36,13 @@ img {
 	margin: auto;
 }
 
+.visually-hidden {
+	position: absolute;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+}
+
 /* Skip to content */
 
 .skip_to_content {
@@ -329,7 +336,7 @@ img {
 }
 
 #sub .headline a {
-	padding: .25em .25em .25em 1em;
+	padding: .25em .25em .25em 0;
 	font-size: 1.75em;
 	line-height: 1.1;
 	margin-bottom: .75em;
