--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -531,6 +531,10 @@ a.not-visited {
   color: #39668e;
 }
 
+.gw-nav-link-icon img {
+  height: auto;
+}
+
 /* Case */
 
 section.case > article {
@@ -599,7 +603,6 @@ section.case nav .controls > .control:hover {
 }
 
 .case .case-category {
-  display: none;
 }
 
 .case span.status {
@@ -2015,8 +2018,8 @@ label[id="38_SHA"] + .content {
   }
 
   .fogbugz-helper-ticket-tweaks section.case .left {
-    margin: 10px 10px 0 10px;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 10px 10px 0 10px;
     float: none;
     width: auto;
     max-width: none;
@@ -2029,6 +2032,13 @@ label[id="38_SHA"] + .content {
 
   .fogbugz-helper-ticket-tweaks #single-case-link {
     display: inline;
+    margin-right: 5px;
+  }
+
+  .case span.status {
+    margin-right: 0;
+    padding: 0 5px;
+    vertical-align: initial;
   }
 
   .fogbugz-helper-ticket-tweaks .case .corner a.case {
@@ -2039,7 +2049,7 @@ label[id="38_SHA"] + .content {
   .fogbugz-helper-ticket-tweaks .add_related_ticket_button {
     display: inline-block;
     width: auto;
-    margin: 0 0 0 10px;
+    margin: 0 5px 0 0;
   }
 
   .fogbugz-helper-ticket-tweaks section.case .left button {
