overflow scroll on task list in mobile

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -2169,6 +2169,8 @@ label[id="38_SHA"] + .content {
 
   .fogbugz-helper-ticket-tweaks #main .case-list {
     display: block;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
